[package]
name = "udptest_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1", features = ["net","rt-multi-thread","macros"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
socket2 = "0.5"
